<resources>
    <string name="app_name">F1InfoAPI</string>
    <string name="track_name_placeholder">Track Name</string>
    <string name="country_placeholder">Country</string>
    <string name="button_circuits">Circuits</string>
    <string name="button_teams">Teams</string>
    <string name="button_seasons">Seasons</string>
    <string name="app_title">F1 Info API</string>
    <string name="circuit_map">Circuit map</string>
    <string name="city_placeholder">City</string>
    <string name="circuit_length_placeholder">4000m</string>
    <string name="date_placeholder">1970</string>
    <string name="capacity_placeholder">50000</string>
    <string name="owner_placeholder">N/A</string>
    <string name="team_name_placeholder">Team Name</string>
    <string name="team_logo">Team logo</string>
    <string name="country_label">Country</string>
    <string name="city_label">City</string>
    <string name="track_length_label">Length</string>
    <string name="track_opened_label">Opened</string>
    <string name="track_capacity_label">Capacity</string>
    <string name="track_owner_label">Owner</string>
    <string name="team_president_label">President</string>
    <string name="team_director_label">Director</string>
    <string name="team_manager_label">Technical Manager</string>
    <string name="team_engine_label">Engine</string>
    <string name="team_tyres_label">Tyres</string>
    <string name="button_drivers">Drivers</string>
    <string name="season_rankings">Season Rankings</string>
    <string name="button_races">Races</string>
    <string name="list_title_placeholder">List</string>
    <string name="season_name">2020</string>
    <string name="driver_photo">Driver photo</string>
    <string name="driver_name_placeholder">Driver Name</string>
    <string name="nationality_label">Nationality</string>
    <string name="birthdate_label">Birthdate</string>
    <string name="driver_rankings">Drivers rankings</string>
    <string name="seasons_title">Championship seasons</string>
    <string name="teams_title">Full teams list</string>
    <string name="circuits_title">Full circuits list</string>
    <string name="flag_icon">Flag Icon</string>
    <string name="not_available">n/a</string>
    <string name="team_rankings">Team rankings</string>
</resources>