<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/track_name_placeholder"
        android:textAlignment="center"
        android:textFontWeight="800"
        android:textSize="@dimen/title_font_size" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/track_map_height"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/circuit_map" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/country_label"
        android:textAlignment="textStart"
        android:textSize="@dimen/label_text_size" />

    <TextView
        android:id="@+id/textViewCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/country_placeholder"
        android:textAlignment="textEnd"
        android:textSize="@dimen/stat_font_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/city_label"
        android:textAlignment="textStart"
        android:textSize="@dimen/label_text_size" />

    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/city_placeholder"
        android:textAlignment="textEnd"
        android:textSize="@dimen/stat_font_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/track_length_label"
        android:textAlignment="textStart"
        android:textSize="@dimen/label_text_size" />

    <TextView
        android:id="@+id/textViewLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/circuit_length_placeholder"
        android:textAlignment="textEnd"
        android:textSize="@dimen/stat_font_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/track_opened_label"
        android:textAlignment="textStart"
        android:textSize="@dimen/label_text_size" />

    <TextView
        android:id="@+id/textViewOpened"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/date_placeholder"
        android:textAlignment="textEnd"
        android:textSize="@dimen/stat_font_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/track_capacity_label"
        android:textAlignment="textStart"
        android:textSize="@dimen/label_text_size" />

    <TextView
        android:id="@+id/textViewCapacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/capacity_placeholder"
        android:textAlignment="textEnd"
        android:textSize="@dimen/stat_font_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/track_owner_label"
        android:textAlignment="textStart"
        android:textSize="@dimen/label_text_size" />

    <TextView
        android:id="@+id/textViewOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/owner_placeholder"
        android:textAlignment="textEnd"
        android:textSize="@dimen/stat_font_size" />
</LinearLayout>