<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_size"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textFontWeight="800"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/buttonSeasons"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_button_size"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/button_seasons"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/buttonTeams"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_button_size"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/button_teams"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeasons" />

    <Button
        android:id="@+id/buttonCircuits"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_button_size"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/button_circuits"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTeams" />

</androidx.constraintlayout.widget.ConstraintLayout>