<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/textViewSeason"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_size"
        android:text="@string/season_name"
        android:textAlignment="center"
        android:textFontWeight="800"
        android:textSize="@dimen/big_title_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textViewTitleRankings"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_size"
        android:layout_marginTop="8dp"
        android:text="@string/season_rankings"
        android:textAlignment="center"
        android:textFontWeight="800"
        android:textSize="@dimen/big_title_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSeason"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonDrivers"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_button_size"
        android:layout_marginTop="@dimen/big_title_font_size"
        android:text="@string/button_drivers"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleRankings" />

    <Button
        android:id="@+id/buttonTeams"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_button_size"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/button_teams"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDrivers" />

</androidx.constraintlayout.widget.ConstraintLayout>